--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,8 +2,13 @@
 @import "fonts";
 @import "reset";
 @import "global";
-
-
-
-
+@import "components/header";
+@import "components/logo";
+@import "components/menu";
+@import "components/user-nav";
+@import "components/hero";
+@import "components/popular";
+@import "components/category";
+@import "components/footer";
+@import "components/form";
 @import "media";
