--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,4 +1,38 @@
 body {
-  
+  font-family: "Rubik", sans-serif;
+  font-size: 20px;
+  line-height: 1.5;
+  background-color: $silver-100;
+  color: $dark;
+}
 
+.container {
+  max-width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.title {
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 1.3;
+  color: $darkBlue-900;
+}
+
+
+
+
+
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
