--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -11,4 +11,5 @@
 @import "components/category";
 @import "components/footer";
 @import "components/form";
+@import "components/contacts";
 @import "media";
