--- a/app/scss/components/_category.scss
+++ b/app/scss/components/_category.scss
@@ -11,6 +11,11 @@
     align-items: center;
     box-shadow: 0px 0px 0px 1px #ECECEC;
     border-radius: 5px;
+    transition: box-shadow 0.5s ease;
+    &:hover {
+      box-shadow: 0px 0px 0px 1px $orange;
+      border-radius: 5px; 
+    }
   }
   &__name {
     font-weight: 400;
