--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -1,32 +1,45 @@
 .footer {
-  padding-bottom: 71px;
   &__inner {
     display: flex;
     justify-content: space-between;
+    padding-bottom: 60px;
+  }
+  &__subscribe,
+  &__info,
+  &__about,
+  &__other {
+    width: 100%;
+    margin-right: 30px;
   }
   &__subscribe {
     max-width: 200px;
-    width: 100%;
   }
-
-
-
-
-
-
-
-
-
-
-
-  &__contacts {
-    display: flex;
-    flex-direction: column;
+  &__info {
+    max-width: 153px;
   }
-  &__social-list {
-    display: flex;
+  &__about {
+    max-width: 91px;
   }
-  &__network {
-    
+  &__other {
+    max-width: 187px;
+  }
+  &__item {
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  }
+  &__link {
+    font-size: 18px;  
+    line-height: 1.3;
+    letter-spacing: 0.01em;
+  }
+  &__copyright {
+    text-align: center;
+    background-color: $silver-100;
+    padding: 30px 0 27px;
+  }
+  &__text {
+    font-size: 14px;
+    line-height: 1;
   }
 }
