--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -3,6 +3,15 @@
     width: 100%;
     padding: 13px 15px;
     margin: 30px 0 12px;
+    border: 1px solid $gray;
+    border-radius: 5px;
+    outline: transparent;
+    &:focus {
+      box-shadow: 0px 0px 0px 2px $orange;      
+    }
+    &:hover::placeholder {
+      color: $dark;
+    }
     &::placeholder {
       font-size: 14px;
       line-height: 1.3;
@@ -18,5 +27,38 @@
     line-height: 1.2;
     padding: 13px 38px 13px 69px;
     width: 100%;
+    position: relative;
+    &:focus,
+    &:hover,
+    &:active {
+      border-radius: 5px;
+      color: $orange;
+      path {
+        fill: $orange;
+      }
+    }
+    &:focus {
+      background-color: rgba(255, 122, 80, 0.1);
+      box-shadow: 0px 0px 0px 2px rgba(255, 104, 56, 0.7);
+    }
+    &:hover {
+      background-color: #fff;
+      box-shadow: 0px 0px 0px 2px rgba(255, 104, 56, 0.7);
+    } 
+    &:active {
+      background-color: #fff2ed;
+      box-shadow: none;
+    }
+    &::before {  
+      position: absolute;
+      content: "";    
+      width: 14px;
+      height: 13px;
+      top: 0;
+      left: 0;
+      path {
+        top:0;
+      }
+    }
   }
 }
