--- a/app/scss/components/_user-nav.scss
+++ b/app/scss/components/_user-nav.scss
@@ -27,6 +27,7 @@
     justify-content: center;
     align-items: center;
     background-color: $orange;
+    color: #fff;
     font-size: 10px;
     border-radius: 50%;
     width: 14px;
