added restourant block

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,15 +1,15 @@
-@import "vars";
-@import "fonts";
-@import "reset";
-@import "global";
-@import "components/header";
-@import "components/logo";
-@import "components/menu";
-@import "components/user-nav";
-@import "components/hero";
-@import "components/popular";
-@import "components/category";
-@import "components/footer";
-@import "components/form";
-@import "components/contacts";
-@import "media";
+@import "abstracts/vars";
+@import "abstracts/mixins";
+@import "base/fonts";
+@import "base/reset";
+@import "base/global";
+@import "blocks/header";
+@import "blocks/menu";
+@import "blocks/user-nav";
+@import "blocks/hero";
+@import "blocks/popular";
+@import "blocks/features";
+@import "blocks/restourant";
+@import "blocks/footer";
+@import "blocks/form";
+@import "blocks/contacts";
