--- a/app/scss/base/_global.scss
+++ b/app/scss/base/_global.scss
@@ -17,12 +17,8 @@ body {
   font-size: 36px;
   line-height: 1.3;
   color: $darkBlue-900;
+  text-align: center;
 }
-
-
-
-
-
 
 .sr-only {
   position: absolute;
@@ -35,4 +31,20 @@ body {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.logo {
+ &__img { 
+   transition: box-shadow 0.5s ease, opacity 0.5s ease;
+ &:focus {
+   box-shadow: 0px 0px 0px 2px rgba(255, 104, 56, 0.7);
+   border-radius: 5px;
+ }
+ &:hover {
+   opacity: 0.8;
+ }
+ &:active {
+   opacity: 0.5;
+ } 
+}    
 }
