--- a/app/scss/blocks/_restourant.scss
+++ b/app/scss/blocks/_restourant.scss
@@ -3,4 +3,52 @@
  &__title {
   margin-bottom: 45px; 
  }
+ &__content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+ }
+ &__item {
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+ }
+ &__image {
+  margin-bottom: 15px;
+ }
+ &__item-title {
+  @include text(24px, 1.3, $darkBlue-900);
+  margin-bottom: 20px;
+ }
+ &__box {
+  padding: 15px 20px 20px;
+ }
+ &__item-title {
+
+ }
+ &__info {
+  display: flex;
+  justify-content: space-between;
+ }
+ &__time {
+
+ }
+ &__link {
+  display: inline-block;
+  vertical-align: bottom;
+  width: 79px;
+  height: 33px;
+  border-radius: 20px;
+  background-color: $orange;
+  position: relative;  
+   &::before {
+    @include pseudo;
+    @include background (url("../images/icons/arrow-right.svg")); 
+    width: 17px;
+    height: 12px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+   }   
+ }
 }
