--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10,6 +10,9 @@
 @import "blocks/popular";
 @import "blocks/features";
 @import "blocks/restourant";
+@import "blocks/testimonials";
+@import "components/slider";
+@import "blocks/app";
 @import "blocks/footer";
 @import "blocks/form";
 @import "blocks/contacts";
