--- a/app/scss/base/_global.scss
+++ b/app/scss/base/_global.scss
@@ -48,3 +48,15 @@ body {
  } 
 }    
 }
+
+@media (max-width: 992px) {
+ .title {
+  font-size: 30px;
+ }
+}
+
+@media (max-width: 768px) {
+ .title {
+  font-size: 24px;
+ }
+}
