--- a/app/scss/blocks/_app.scss
+++ b/app/scss/blocks/_app.scss
@@ -7,6 +7,7 @@
  }
  &__box {
   max-width: 538px;
+  margin-right: 20px;
  }
  &__title {
   text-align: left;
@@ -22,5 +23,35 @@
   &:not(:last-child) {
    margin-right: 30px;
   }
+ }
+}
+
+@media (max-width: 992px) {
+ .app {
+  padding-bottom: 80px;
+  &__inner {
+   flex-direction: column;
+  }
+  &__box {
+   margin-bottom: 25px;
+  }
+ }
+}
+
+@media (max-width: 768px) {
+ .app {
+  padding-bottom: 60px;
+  &__title {
+   margin-bottom: 20px;
+  }
+  &__text {
+   font-size: 18px;
+  }
+ }
+}
+
+@media (max-width: 576px) {
+ .app {
+  padding-bottom: 30px;
  }
 }
