--- a/app/scss/blocks/_contacts.scss
+++ b/app/scss/blocks/_contacts.scss
@@ -6,13 +6,14 @@
     line-height: 2;
     margin-bottom: 15px;
     position: relative;
+    padding-left: 25px;
     &::before {
       position: absolute;
       content: "";
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
-      left: -30px;
+      left: 0;
       top: 7px;
     }
   }
@@ -55,4 +56,10 @@
       border-radius: 5px;
     }
   }
+}
+
+@media (max-width: 790px) {
+ .contacts {
+ margin-top: 25px;
+ }
 }
