--- a/app/scss/blocks/_features.scss
+++ b/app/scss/blocks/_features.scss
@@ -68,3 +68,47 @@
   }
  }
 }
+
+@media (max-width: 992px) {
+ .features {
+  padding-bottom: 80px;
+  &__image {
+   display: none;
+  }
+  &__box {
+   margin: 0 auto;
+   padding-top: 0;
+  }
+ }
+}
+
+@media (max-width: 768px) {
+ .features {
+  padding-bottom: 60px;
+  &__text {
+   font-size: 18px;
+  }
+  &__item {
+   padding-left: 25px;
+   font-size: 12px;
+   &:not(:last-child) {
+    margin-bottom: 30px;
+   }
+   &:before {
+   top: -6px;
+   left: -5px;
+   width: 25px;
+   height: 25px;
+   }
+  }
+  &__link {
+   font-size: 14px;
+  }
+ }
+}
+
+@media (max-width: 576px) {
+ .features {
+  padding-bottom: 30px;
+ }
+}
