--- a/app/scss/blocks/_footer.scss
+++ b/app/scss/blocks/_footer.scss
@@ -33,6 +33,64 @@
     line-height: 1.3;
     letter-spacing: 0.01em;
   }
+  .contacts {
+   display: flex;
+   flex-direction: column;
+   &__link {
+     font-size: 16px;
+     line-height: 2;
+     margin-bottom: 15px;
+     position: relative;
+     &::before {
+       position: absolute;
+       content: "";
+       background-repeat: no-repeat;
+       background-size: cover;
+       background-position: center;
+       left: -30px;
+       top: 7px;
+     }
+   }
+   &__link--location::before {
+     background-image: url("../../images/icons/location.svg");
+     width: 15px;
+     height: 18px;
+   }
+   &__link--phone::before {
+     background-image: url("../../images/icons/calling.svg");
+     width: 19px;
+     height: 19px;
+   }
+   &__link--mail::before {
+     background-image: url("../../images/icons/message.svg");
+     width: 20px;
+     height: 18px;
+   }
+   &__social {
+     margin-left: -35px;
+   }
+   &__list {
+     display: flex;
+   }
+   &__item {
+     &:not(:last-child) {
+       margin-right: 13px;
+     }
+   }
+   &__item-link {
+     display: block;
+     width: 39px;
+     height: 39px;
+     background-repeat: no-repeat;
+     background-size: cover;
+     background-position: center;
+     &:focus {
+       background-color: #fff2ed;
+       box-shadow: 0px 0px 0px 2px rgba(255, 104, 56, 0.7);
+       border-radius: 5px;
+     }
+   }
+ }
   &__copyright {
     text-align: center;
     background-color: $silver-100;
@@ -42,4 +100,44 @@
     font-size: 14px;
     line-height: 1;
   }
+}
+
+@media (max-width: 992px) {
+ .footer {
+  &__inner {
+   flex-wrap: wrap;
+  }
+  &__link {
+   font-size: 14px;
+  }
+  .contacts {
+   &__link {
+    font-size: 14px;
+   }
+  }
+ }
+}
+
+@media (max-width: 790px) {
+ .footer {
+  &__other {
+   margin-top: 25px;
+  }
+ }
+}
+
+@media (max-width: 580px) {
+ .footer {
+  &__about {
+   margin-top: 25px;
+  }
+ }
+}
+
+@media (max-width: 458px) {
+ .footer {
+  &__info {
+   margin-top: 25px;
+  }
+ }
 }
