--- a/app/scss/blocks/_popular.scss
+++ b/app/scss/blocks/_popular.scss
@@ -115,8 +115,9 @@
   border-radius: 5px;
   text-align: center;
   width: 210px;
+  transition: all 0.5s;
   &:hover {
-   border: 1px solid $orange;
+   box-shadow: 0px 0px 0px 1px $orange;
   }
  }
  &__card-image {
