--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,4 +16,5 @@
 @import "blocks/footer";
 @import "blocks/form";
 @import "blocks/contacts";
-@import "catalog/catalog";
+@import "catalog-page/catalog";
+@import "catalog-page/promotions";
