--- a/app/scss/base/_global.scss
+++ b/app/scss/base/_global.scss
@@ -63,6 +63,10 @@ body {
  display: none;
 }
 
+.irs--flat .irs-from, .irs--flat .irs-to, .irs--flat .irs-single {
+ display: none;
+}
+
 .breadcrumbs {
  padding: 24px 0;
  background-color: rgba(255, 122, 80, 0.1);
@@ -143,6 +147,9 @@ body {
  .title {
   font-size: 30px;
  }
+ .irs--flat {
+  width: 180px;
+}
 }
 
 @media (max-width: 768px) {
