--- a/app/scss/catalog-page/_catalog.scss
+++ b/app/scss/catalog-page/_catalog.scss
@@ -6,11 +6,15 @@
   align-items: center;
   margin-bottom: 60px;
  }
+ &__filters-btn {
+  display: none;
+ }
  &__selects-name {
   margin-right: 15px;
  }
  &__content {
   display: flex;
+  margin-bottom: 60px;
  }
  &__aside {
   width: 270px;
@@ -47,8 +51,137 @@
  &__label {
   display: block;
  }
+ &__menu {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+ }
+ &__menu-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 210px;
+  box-shadow: 0px 0px 0px 1px #ECECEC;
+  border-radius: 5px;
+  padding: 20px 0;
+  transition: all 0.5s;
+  &:hover {
+   box-shadow: 0px 0px 0px 1px $orange;
+  }
+ }
+ &__menu-image {
+  width: 140px;
+  height: 140px;
+  margin-bottom: 10px;
+ }
+ &__menu-title {
+  @include text(15px, 1.2, $darkBlue-900);
+  text-align: center;
+ }
+ &__menu-price {
+  @include text(15px, 1.4, $darkBlue-900);
+  margin-bottom: 10px;
+  margin-top: auto;
+ }
+ &__menu-btn {
+  @include text(14px, 1.3, #fff);
+  background-color: $orange;
+  padding: 7px 15px;
+  border-radius: 6px;
+ }
 }
 
-@media (max-width: 1200px) {
- 
+@media (max-width: 992px) {
+ .catalog {
+  &__aside {
+   width: 220px;
+  }
+  &__category-title,
+  &__offers-title,
+  &__price-title {
+   font-size: 18px;
+  }
+  &__category-link,
+  &__label,
+  &__price-box {
+   font-size: 16px;
+  }
+  &__menu {
+   grid-template-columns: repeat(3, 1fr);
+  }
+  &__menu-card {
+   &:nth-child(n+10) {
+    display: none;
+   }
+  }
+  &__menu-image {
+   width: 120px;
+   height: 120px;
+  }
+  &__menu-title,
+  &__menu-price,
+  &__menu-btn {
+   font-size: 12px;
+  } 
+ }
+}
+@media (max-width: 768px) {
+ .catalog {
+  &__aside {
+   width: 100px;
+  }
+  &__category-title,
+  &__offers-title,
+  &__price-title {
+   font-size: 16px;
+  }
+  &__category-link,
+  &__label,
+  &__price-box {
+   font-size: 14px;
+  }
+  &__menu {
+   grid-template-columns: repeat(2, 1fr);
+  }
+  &__menu-card {
+   max-width: 170px;
+   &:nth-child(n+7) {
+    display: none;
+   }
+  }
+ }
+}
+
+@media (max-width: 375px) {
+ .catalog {
+  &__box {
+   display: block;
+   margin-bottom: 20px;
+  }
+  &__title {
+   margin-bottom: 20px;
+  }
+  &__filters-btn {
+   display: inline-block;
+  }
+  &__selects {
+   display: inline-block;
+   vertical-align: top;
+  }
+  &__selects-name,
+  &__selects-show {
+   height: 47px;
+   font-size: 14px;
+  }
+  &__aside {
+   display: none;
+  }
+  .catalog__aside--active {
+  display: block;
+   width: 100%;
+  }
+  .catalog__menu--active {
+   display: none;
+  }
+ }
 }
