--- a/app/scss/catalog-page/_promotions.scss
+++ b/app/scss/catalog-page/_promotions.scss
@@ -25,3 +25,22 @@
   padding: 15px 20px;
  }
 }
+
+@media (max-width: 992px) {
+ .promotions {
+  &__text {
+   font-size: 20px;
+  }
+ }
+}
+
+@media (max-width: 768px) {
+ .promotions {
+  &__inner {
+  
+  }
+  &__text {
+   font-size: 16px;
+  }
+ }
+}
