fix product page

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -18,4 +18,5 @@
 @import "blocks/contacts";
 @import "catalog-page/catalog";
 @import "catalog-page/promotions";
-@import "products/cheeseburger";
+@import "products/product";
+@import "products/product-tabs";
