added product-comment block

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -20,3 +20,4 @@
 @import "catalog-page/promotions";
 @import "products/product";
 @import "products/product-tabs";
+@import "products/product-comments";
