--- a/app/scss/blocks/_form.scss
+++ b/app/scss/blocks/_form.scss
@@ -28,6 +28,11 @@
     padding: 13px 38px 13px 69px;
     width: 100%;
     position: relative;
+    svg {
+     position: absolute;
+     left: 45px;
+     top: 14px;
+    }
     &:focus,
     &:hover,
     &:active {
@@ -37,6 +42,7 @@
         fill: $orange;
       }
     }
+   
     &:focus {
       background-color: rgba(255, 122, 80, 0.1);
       box-shadow: 0px 0px 0px 2px rgba(255, 104, 56, 0.7);
